# pciutils-win

./: Makefile
lib/: CMakeLists.txt  configure  i386-io-windows.h  i386-ports.c
win32/: DirectIoLib.sln
